packages/sycamore-macro/tests/view/element-fail.stderr
error: expected `=`
 --> tests/view/element-fail.rs:5:54
  |
5 |         let _: View<G> = view! { ctx, button(disabled) };
  |                                                      ^

error: expected `=`
 --> tests/view/element-fail.rs:6:54
  |
6 |         let _: View<G> = view! { ctx, button(on:click) };
  |                                                      ^

error: unknown directive `unknown`
 --> tests/view/element-fail.rs:7:46
  |
7 |         let _: View<G> = view! { ctx, button(unknown:directive="123") };
  |                                              ^^^^^^^

error: expected `=`
 --> tests/view/element-fail.rs:9:47
  |
9 |         let _: View<G> = view! { ctx, button(a.b.c="123") };
  |                                               ^

error: unexpected end of input, children and dangerously_set_inner_html cannot be both set
  --> tests/view/element-fail.rs:11:26
   |
11 |           let _: View<G> = view! { ctx,
   |  __________________________^
12 | |             p(dangerously_set_inner_html="<span>Test</span>") {
13 | |                 "Error"
14 | |             }
15 | |         };
   | |_________^
   |
   = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)
